apps/overlays/prod/patches/resources-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-frontend
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-backend
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-chromadb
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: chromadb
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
